<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemoteControl</string>
    <string name="action_settings">Settings</string>
	<string name="contentDescription"></string>
	<string name="one">1</string>
	<string name="dummy"></string>
	<string name="connect">Connect</string>
	<string name="quit">Quit</string>
	<string name="bluetoothDevices">Bluetooth Devices</string>
	<string name="pairedDevices">Paired Devices</string>
	<string name="scan">Scan</string>
</resources>
