<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="100" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="40"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/ibForward"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/customup" />

        <ImageButton
            android:id="@+id/ibBackward"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/customdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvConnectionStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/one" />

        <TextView
            android:id="@+id/tvDebug"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            android:text="@string/dummy" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ibLeft"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="#ffffff"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/customleft" />

        <ImageButton
            android:id="@+id/ibRight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="#ffffff"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/customright" />
    </LinearLayout>

</LinearLayout>